--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://relaxed-thompson-1ced1b.netlify.com"
+baseURL = "https://nitingarg.me"
 languageCode = "en-us"
 title = "Nitin Garg"
 theme = "osprey"
